# esp-servo-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
docs/: app.uxf
main/: CMakeLists.txt  main.cpp
main/inc/: main.h
main/inc/SkyBlue/: Collector.hpp  Device.hpp  InterfaceTraits.hpp  Module.hpp  Types.hpp
main/inc/servo/: servo_ortho.h
main/src/servo/: servo_ortho.cpp
